--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vuepic/vue-datepicker": "^3.4.6",
     "axios": "^0.27.2",
     "vue": "^3.2.37",
+    "vue-multiselect": "^3.0.0-alpha.2",
     "vue-router": "^4.1.3"
   },
   "devDependencies": {
