--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vuepic/vue-datepicker": "^3.4.6",
     "axios": "^0.27.2",
+    "pinia": "^2.0.21",
     "vue": "^3.2.37",
     "vue-multiselect": "^3.0.0-alpha.2",
     "vue-router": "^4.1.3"
