--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "pinia": "^2.0.21",
     "vue": "^3.2.37",
     "vue-multiselect": "^3.0.0-alpha.2",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "vue-select": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
