--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue": "^3.2.37",
     "vue-multiselect": "^3.0.0-alpha.2",
     "vue-router": "^4.1.3",
-    "vue-select": "^4.0.0-beta.3"
+    "vue-select": "^4.0.0-beta.3",
+    "vue3-google-map": "^0.14.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
