--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "test": "vitest"
   },
   "dependencies": {
     "@vuepic/vue-datepicker": "^3.4.6",
@@ -21,11 +22,14 @@
     "@rushstack/eslint-patch": "^1.1.0",
     "@vitejs/plugin-vue": "^3.0.1",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/test-utils": "^2.0.2",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^9.0.0",
+    "happy-dom": "^6.0.4",
     "prettier": "^2.5.1",
     "sass": "^1.54.4",
     "vite": "^3.0.1",
-    "vite-svg-loader": "^3.4.0"
+    "vite-svg-loader": "^3.4.0",
+    "vitest": "^0.23.2"
   }
 }
