--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@vue/eslint-config-typescript": "^11.0.1",
     "@vuepic/vue-datepicker": "^3.4.6",
     "axios": "^0.27.2",
     "pinia": "^2.0.21",
+    "typescript": "^4.8.3",
     "vue": "^3.2.37",
     "vue-multiselect": "^3.0.0-alpha.2",
     "vue-router": "^4.1.3",
