--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pinia": "^2.0.21",
     "typescript": "^4.8.3",
     "vue": "^3.2.37",
+    "vue-i18n": "^9.2.2",
     "vue-multiselect": "^3.0.0-alpha.2",
     "vue-router": "^4.1.3",
     "vue-select": "^4.0.0-beta.3",
