--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^4.8.3",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.2",
+    "vue-meta": "^3.0.0-alpha.10",
     "vue-multiselect": "^3.0.0-alpha.2",
     "vue-router": "^4.1.3",
     "vue-select": "^4.0.0-beta.3",
