--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "vite build",
     "preview": "vite preview --port 4173",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "test": "vitest"
+    "test": "vitest",
+    "typecheck": "vue-tsc --noEmit",
+    "typecheck:watch": "vue-tsc --noEmit --watch"
   },
   "dependencies": {
     "@vue/eslint-config-typescript": "^11.0.1",
@@ -20,6 +22,7 @@
     "vue-multiselect": "^3.0.0-alpha.2",
     "vue-router": "^4.1.3",
     "vue-select": "^4.0.0-beta.3",
+    "vue-tsc": "^1.8.8",
     "vue3-google-map": "^0.14.0"
   },
   "devDependencies": {
